--- a/propuestas.html
+++ b/propuestas.html
@@ -145,7 +145,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 <!-- Main -->
 <main class="flex-grow container mx-auto px-4 sm:px-6 lg:px-8 py-12">
   <div class="max-w-4xl mx-auto">
-    <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter mb-4 text-center">Mis Propuestas para un Chile más desarrollado</h1>
+    <h1 class="text-4xl md:text-5xl font-extrabold tracking-tighter mb-4 text-center">Mis Propuestas para un Chile para la gente</h1>
     <p class="text-lg text-text-muted-light dark:text-text-muted-dark text-center mb-12">Un plan claro y concreto para construir un futuro mejor para todos.</p>
     <div class="space-y-8">
       <div class="bg-background-light dark:bg-background-dark/50 border border-border-light dark:border-border-dark rounded-xl p-8 transition-shadow hover:shadow-lg">
