--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   <h3 class="text-2xl font-bold text-slate-900 dark:text-white mb-4">Perfil del Candidato</h3>
   <div class="space-y-3 text-slate-600 dark:text-slate-400">
   <p><strong>Nombre:</strong> Cristian Arturo Seguel Olivos</p>
-  <p><strong>Trayectoria:</strong> Técnico Electrónico y emprendedor. No proviene de una familia adinerada; se ha formado con esfuerzo propio.</p>
-  <p><strong>Motivación:</strong> Cansado de las malas prácticas tanto privadas como del Estado, busca representar directamente a la gente de su distrito, con especial foco en los emprendedores y trabajadores.</p>
+  <p><strong>Trayectoria:</strong> Técnico Electrónico y emprendedor. No proviene de una familia con privilegios; se ha formado con esfuerzo propio.</p>
+  <p><strong>Motivación:</strong> Cansado de las malas prácticas tanto privadas como del Estado, busca representar directamente a la gente de su distrito, con especial foco en los trabajadores, en emprendedores, en los estudiantes especialmente a estudiantes tecnicos profesionales.</p>
   <p><strong>Postura política:</strong> Candidato del Partido de la Gente (PDG). Sin militancias anteriores, ni de izquierda ni de derecha; enfoque ciudadano y pragmático.</p>
   <p><strong>Rol en el Congreso:</strong> Fiscalizar y proponer proyectos que apoyen a emprendedores, trabajadores independientes y familias de clase media.</p>
 
@@ -194,18 +194,17 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
     }
   </style>
 
-  <h3 class="text-2xl font-bold mb-4 bg-red-600 text-white px-6 py-2 rounded-lg inline-flex justify-center items-center gap-2 animate-[glow_1s_ease-in-out_infinite] w-full text-center">
+  <h3 class="text-2xl font-bold mb-4 bg-blue-600 text-white px-6 py-2 rounded-lg inline-flex justify-center items-center gap-2 animate-[glow_1s_ease-in-out_infinite] w-full text-center">
     <span class="text-yellow-400">★</span>
     PARISI PRESIDENTE!!
     <span class="text-yellow-400">★</span>
   </h3>
-
+<br>
   <p class="mb-2 font-semibold text-slate-700 dark:text-slate-300">
-    Ni fachos ni comunachos! somos el Partido de la Gente
-  </p>
-  <p class="mb-6 text-slate-600 dark:text-slate-400">
     Conoce nuestras propuestas de un Chile para los chilenos
   </p>
+  <br>
+
 
   <!-- Botón Descargar -->
 <a href="https://storage.googleapis.com/parisipresidente/programa%20de%20gobierno/programa-de-gobierno-parisi-presidente-2026.pdf" download
