--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
   <div class="space-y-3 text-slate-600 dark:text-slate-400">
   <p><strong>Nombre:</strong> Cristian Arturo Seguel Olivos</p>
   <p><strong>Trayectoria:</strong> Técnico Electrónico y emprendedor. No proviene de una familia con privilegios; se ha formado con esfuerzo propio.</p>
-  <p><strong>Motivación:</strong> Cansado de las malas prácticas tanto privadas como del Estado, busca representar directamente a la gente de su distrito, con especial foco en los trabajadores, en emprendedores, en los estudiantes especialmente a estudiantes tecnicos profesionales.</p>
+  <p><strong>Motivación:</strong> Cansado de las malas prácticas, tanto en el ámbito privado como en el Estado, busca representar directamente a la gente de su distrito, con especial atención a trabajadores, emprendedores y estudiantes, especialmente aquellos de liceos técnicos profesionales.</p>
   <p><strong>Postura política:</strong> Candidato del Partido de la Gente (PDG). Sin militancias anteriores, ni de izquierda ni de derecha; enfoque ciudadano y pragmático.</p>
   <p><strong>Rol en el Congreso:</strong> Fiscalizar y proponer proyectos que apoyen a emprendedores, trabajadores independientes y familias de clase media.</p>
 
@@ -194,7 +194,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
     }
   </style>
 
-  <h3 class="text-2xl font-bold mb-4 bg-blue-600 text-white px-6 py-2 rounded-lg inline-flex justify-center items-center gap-2 animate-[glow_1s_ease-in-out_infinite] w-full text-center">
+  <h3 class="text-2xl font-bold mb-4 bg-blue-600 text-white px-6 py-2 rounded-lg inline-flex justify-center items-center gap-2 w-full text-center">
     <span class="text-yellow-400">★</span>
     PARISI PRESIDENTE!!
     <span class="text-yellow-400">★</span>
