--- a/compromisos.html
+++ b/compromisos.html
@@ -37,6 +37,8 @@ tailwind.config = {
 .drawer-hidden { transform: translateX(-100%); }
 .drawer-visible { transform: translateX(0); transition: transform .26s cubic-bezier(.2,.8,.2,1); }
 </style>
+<link rel="icon" type="image/png" href="img/favicon.png">
+
 </head>
 <body class="bg-background-light dark:bg-background-dark font-display text-text-light dark:text-text-dark">
 
