--- a/galeria.html
+++ b/galeria.html
@@ -116,7 +116,7 @@ document.getElementById("shareBtn").addEventListener("click", async () => {
 <div class="text-center mb-12">
 <h2 class="text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white sm:text-5xl">Galería de imagenes - Redes Sociales</h2>
 <p class="mt-4 max-w-2xl mx-auto text-lg text-gray-500 dark:text-gray-400">
-            Sigueme en redes sociales, Instagram - Facebook - X - TikTok
+            Sigueme en redes sociales, Instagram - Facebook - TikTok
           </p>
 </div>
 <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6 lg:gap-8">
